dropDownAltManager (v1.2 build3)